--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-append-url-version",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,8 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "extend": "^3.0.0",
+    "is-image": "^1.0.1",
     "rework": "^1.0.1",
     "rework-plugin-function": "^1.0.2",
     "through2": "^2.0.0"
