--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "extend": "^3.0.0",
+    "is-image": "^1.0.1",
     "rework": "^1.0.1",
     "rework-plugin-function": "^1.0.2",
     "through2": "^2.0.0"
